# back-end-test

./: pyproject.toml
backend/: __init__.py  db.py
backend/models/: orm.py
backend/routes/: seller_management.py
