[tool.poetry]
name = "back-end-test"
version = "0.1.0"
description = ""
authors = ["Lucas Sousa Silva <lucassousasilva@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
